# DataExplorer

./: .buildinfo  .buildinfo.bak  .coverage  README.md  chatbot.html  index.html  installation.html  py-modindex.html  pyproject.toml  searchindex.js  utils.html
.devcontainer/: devcontainer.json
.github/workflows/: sphinx_doc.yaml  tests.yaml
_modules/: index.html
_modules/dataexplorer/: utils.html
docs/source/: conf.py  homepage.rst  index.rst  installation.rst
src/dataexplorer/: chat.py  homepage.py  utils.py
tests/: test_load_data.py
